[package]
name = "glyphon"
description = "Fast, simple 2D text rendering for wgpu"
version = "0.7.0"
edition = "2021"
homepage = "https://github.com/grovesNL/glyphon.git"
repository = "https://github.com/grovesNL/glyphon"
license = "MIT OR Apache-2.0 OR Zlib"

[dependencies]
wgpu = { version = "23", default-features = false, features = ["wgsl"] }
etagere = "0.2.10"
cosmic-text = { path = "../cosmic-text" }
swash = { version = "0.1.17" }
rustc-hash = "2.0"
hashbrown = "0.15.1"
ahash = "0.8.11"

[dev-dependencies]
winit = "0.30.3"
wgpu = "23"
resvg = { version = "0.44", default-features = false }
pollster = "0.4.0"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.profiling]
inherits = "release"
debug = true

[[bench]]
name = "prepare"
harness = false
